Fix coming_soon mobile version - Fix image uploading speed

--- a/app/assets/stylesheets/pages/_coming_soon.scss
+++ b/app/assets/stylesheets/pages/_coming_soon.scss
@@ -8,9 +8,9 @@
   }
 
   #coming-soon-text {
-    font-size: 2rem;
     font-weight: 700;
     text-align: center;
+    font-size: 3rem;
   }
 
   .coming-soon-image {
@@ -59,10 +59,6 @@
     -moz-box-shadow: 0 0 8px 8px black inset;
     -webkit-box-shadow: 0 0 8px 8px black inset;
     box-shadow: 0 0 8px 8px black inset;
-  }
-
-  #coming-soon-text {
-    font-size: 3rem;
   }
 
   // Icons
